--- a/src/main/resources/application.sample.properties
+++ b/src/main/resources/application.sample.properties
@@ -1,3 +1,3 @@
 spring.datasource.url = sql.server.url
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
