--- a/src/main/resources/application.sample.properties
+++ b/src/main/resources/application.sample.properties
@@ -1,3 +1,4 @@
 spring.datasource.url = sql.server.url
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
