Set base url for REST API

--- a/src/main/resources/application.sample.properties
+++ b/src/main/resources/application.sample.properties
@@ -2,3 +2,4 @@ spring.datasource.url = sql.server.url
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+server.servlet.context-path=/flightTracker/api
